# SamiP-CodeProjects

./: .gitignore  README.md
CDD ML/: CDD_ML_Part_1_bioactivity_data.ipynb  CDD_ML_Part_2_Exploratory_Data_Analysis.ipynb  bioactivity_data.csv  bioactivity_preprocessed_data.csv
CDD ML/myenv/: pyvenv.cfg
ChatClient/: ChatClientREADME.md  index.html
ChatClient/ChatClient/resources/: chat.css  chat.html  chat.js  index.html
ChatClient/ChatClient/src/: ConnectionHandler.java  Main.java  (+6 more)
GirlsJustWannaDebug/: GJWDREADME.md
GirlsJustWannaDebug/App/: Resources.qrc  WaterDropletGame.pro  bug.cpp  bug.h  controller.cpp  controller.h  deathscreen.cpp  deathscreen.h  deathscreen.ui  gamescene.cpp  gamescene.h  login.cpp  login.h  login.ui  main.cpp  player.cpp  player.h  signup.cpp  signup.h  signup.ui  user.cpp  user.h
TLSLite/: CASignedClientCertificate.pem  CAcertificate.pem  CAprivateKey.pem  TLSLiteREADME.md  client.csr  clientPrivate.key  clientPrivateKey.der  config.cnf  index.txt  index.txt.old  server.csr  serverPrivate.key  serverPrivateKey.der  touchpoint.txt
TLSLite/newcerts/: 1000.pem
causeOfDeathVisualization/: ignore.gitignore  script.js  styles.css
docs/: COD_ISOA3.csv  causeOfDeath.ipynb  index.html
msdScript/: Expr.cpp  ExprTest.cpp  Makefile  cmdline.cpp  cmdline.h  exec.cpp  exec.h  main.cpp  parse.cpp  parse.h  val.h
samiScript/: CMakeLists.txt  Env.cpp  Env.h  Expr.cpp  Expr.h  ExprTest.cpp  Makefile  catch.h  cmdline.cpp  cmdline.h  main.cpp  parse.cpp  parse.h  pointer.h  samiScriptREADME.md  test_msdscript.cpp  test_samiscript  val.cpp
(+11 files in other folders)
